Update acceptance tests for URIs
Convert the end-to-end workspace tests to publish and observe\nURI-based identities so cross-context and recovery flows still\nexercise the migrated event model.